--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>A train cargo organizer using stacks and linked lists</h2>
 <p>An online compiler was used: <a href = "https://tio.run/">https://tio.run/</a>. For this, the code was all meshed into a single file, because I don't know how to add custom libraries to online compilers</p>
-tio.run is an inline interpreter supporting 681 languages and allows easy code usage without installing or downloading anything, thank you tio.run!</p>
+tio.run is an inline interpreter supporting 681 languages that allows easy code usage without installing or downloading anything, thank you tio.run!</p>
 <p>Here the input was added already, but for custom input just write it inside the input box and click play</p>
 <br>This is meant to be a system of stack loading packages in trains, with the heaviest cars nearer to the cabine and heaviest packages by the bottom
 <br>Input should inform a the max amount of cars per train, the max weight of each car and a sequence of packages' weights
